cache stats and lru cache